[package]
name = "pot-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.0", features = ['http', 'axum'], optional = true }
worker-macros = { version = "0.4.0", features = ['http'], optional = true }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.1" }
leptos = "0.6.15"
axum = { version = "0.7", default-features = false, optional = true, features = [
    "json",
    "macros",
] }
http = { version = "1.1.0", optional = true }
leptos_axum = { version = "0.6.15", default-features = false, optional = true }
leptos_meta = "0.6.15"
leptos_router = "0.6.15"
wasm-bindgen = "0.2.95"
console_log = "1.0.0"
log = "0.4.22"
serde = "1.0.210"
wasm-bindgen-futures = "0.4.45"
futures-util = "0.3.30"
web-sys = { version = "0.3.72", features = [
    "Storage",
    "Navigator",
    "StorageManager",
] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
serde_json = "1.0.128"
send_wrapper = "0.6.0"
gloo-timers = "0.3.0"
worker-kv = "0.7.0"
ahash = { version = "0.8.11", default-features = false }
enum-as-inner = "0.6.1"
either = "1.13.0"
wasmi = "0.38.0"
sha2 = "0.10.8"
anyhow = "1.0.91"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:http",
    "dep:axum",
    "leptos/ssr",
    "leptos_axum/wasm",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:worker",
    "dep:worker-macros",
]
